<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/colorDialog"
    android:minWidth="300dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout"
        android:layout_margin="10dp"
        android:stretchColumns="1">
        <TableRow android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_apha" />
            <SeekBar android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alphaSeekBar"
                android:max="255"
                android:paddingLeft="10dp" android:paddingRight="10dp"/>
        </TableRow>
        <TableRow android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_red" />
            <SeekBar android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="10dp" android:paddingRight="10dp"
                android:id="@+id/redSeekBar" />
        </TableRow>
        <TableRow android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_green" />
            <SeekBar android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="10dp" android:paddingRight="10dp"
                android:id="@+id/greenSeekBar" />
        </TableRow>
        <TableRow android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_blue" />
            <SeekBar android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:paddingLeft="10dp" android:paddingRight="10dp"
                android:id="@+id/blueSeekBar" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/white">
        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/colorView" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_set_color"
        android:id="@+id/setColorButton"
        android:layout_gravity="center_horizontal" />
</LinearLayout>